--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version:  "3.7"
 services: 
   proxy:
     image: traefik:2.4
-    command: --provider.docker
+    command: --providers.docker
     ports: 
       - "80:80"
     volumes: 
